# one

./: .gitattributes  .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  MUJOCO_LOG.TXT  README.md  _derive_persist.py  _probe_degree.py  _probe_invariance.py  _proto_deflate_pencil.py  _proto_modreduce.py  _test.py  _test_py0_symbolic.py  analyze_geometry.py  analyze_wrist_axes.py  analyze_zero_config.py  bunny.stl  bunny_small.stl  check_link_indices.py  check_opengl.py  check_ow6.py  check_q1_45_q2_30.py  check_q2_with_q1.py  check_q2_zero_reference.py  check_r36_convention.py  collided.xml  debug_2r_plane.py  debug_collision.xml  debug_free_robot.xml  debug_mesh.xml  debug_new_first3.py  debug_q2_geometry.py  debug_q2_q3_formulas.py  debug_rs007l_geometry.py  debug_rs007l_simple.py  debug_solve_first3.py  derive_zxz_formula.py  diagnose_projection_issue.py  (+67 more)
one/robots/humanoids/linx/l1/: CMakeLists.txt  __init__.py  l1.py  package.xml
one/robots/humanoids/linx/l1/data/chain_left_arm/: cvt_feat.npy  cvt_q.npy  cvt_tf.npy  cvt_tree.pkl
one/robots/humanoids/linx/l1/data/chain_left_arm_waist/: cvt_feat.npy  cvt_q.npy  cvt_tf.npy  (+1 more)
one/robots/humanoids/linx/l1/meshes/: left_arm_link_1.STL  left_arm_link_2.stl  left_arm_link_3.STL  left_arm_link_4.stl  left_arm_link_5.stl  left_arm_link_6.stl  neck_link1.STL  neck_link2.stl  right_arm_link_1.stl  right_arm_link_2.stl  right_arm_link_3.stl  right_arm_link_4.stl  right_arm_link_5.stl  right_arm_link_6.stl  waist_link1.stl  waist_link2.stl
one/robots/humanoids/linx/l1/urdf/: h0602.urdf  h0602.urdf.with_hands.bak
(+547 files in other folders)
